welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:-7: error: not found: value in3050
 val res = in3050( t.getParameter(0).asInstanceOf[Int], t.getParameter(1).asInstanceOf[Int]);
           ^in3050:20: error: type mismatch;
 found   : Unit
 required: Boolean
  if(a > 40){
  ^